--- a/wk3/makefile-x86_64
+++ b/wk3/makefile-x86_64
@@ -5,9 +5,9 @@ INCLUDES=
 LFLAGS=-L/user/lib/x86_64-linux-gnu
 LIBS=-lcurl -lpthread
 
-SRC=requestor.c
+SRC=curlClient.c
 OBJ=$(SRC:.c=.o)
-MAIN=test
+MAIN=client
 
 RM=rm -rf
 
